--- a/templates/results.html
+++ b/templates/results.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} Your Story {% endblock %}
+{% block title %} {{ story }} {% endblock %}
 
 {% block content %}
 
